Description of changes

--- a/timetable-display-project/src/AdminPanel.html
+++ b/timetable-display-project/src/AdminPanel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - Timetable System</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <!-- Add jsPDF library for PDF generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
@@ -15,6 +15,7 @@
         <a class="navbar-brand" href="#">Timetable Admin</a>
         <div class="navbar-nav">
             <a href="DisplayTimetable.html" class="nav-link">View Timetable</a>
+            <a href="/admin" class="nav-link">Admin Panel</a>
             <a href="#" id="logoutBtn" class="nav-link">Logout</a>
         </div>
     </nav>
@@ -122,6 +123,6 @@
     </script>
     
     <!-- Changed from timetable.java to timetable.js since we need JavaScript, not Java for browser -->
-    <script src="/scripts/timetable.js"></script>
+    <script src="../scripts/timetable.js"></script>
 </body>
 </html>
