--- a/timetable-display-project/src/DisplayTimetable.html
+++ b/timetable-display-project/src/DisplayTimetable.html
@@ -7,21 +7,12 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <a class="navbar-brand" href="#">Timetable System</a>
-        <div class="navbar-nav">
-            <a href="/admin" class="nav-link">Admin Panel</a>
-            <a href="/admin" class="nav-link">Logout</a>
-        </div>
-    </nav>
+   
 
-    <!-- Timetable Header -->
+    <!-- Simplified Timetable Header -->
     <div class="timetable-header">
-        <h1>Time Table Fall Semester 2024</h1>
-        <h2>DEPARTMENT OF COMPUTER SCIENCE & INFORMATION TECHNOLOGY</h2>
-        <h3>University of Chakwal</h3>
-        <h4>BSIT - 1st, 3rd, 5th, 7th Semester (Evening): 30-09-2024</h4>
+        <h1><b>Time Table</b></h1>
+        <h3><b>DEPT. OF CS & IT - University of Chakwal</b></h3>
     </div>
 
     <!-- Timetable -->
