--- a/timetable-display-project/src/AdminPanel.html
+++ b/timetable-display-project/src/AdminPanel.html
@@ -48,17 +48,33 @@
             <form id="timetableForm">
                 <h3>Add New Timetable Entry</h3>
                 <div class="input-group">
-                    <label for="session">Select Week:</label>
+                    <label for="session">Select Session:</label>
                     <select id="session" name="session" required>
-                        <option value="1">Week 1</option>
-                        <option value="2">Week 2</option>
-                        <option value="3">Week 3</option>
-                        <option value="4">Week 4</option>
+                        <option value="2021">2021 (7th Semester)</option>
+                        <option value="2022">2022 (5th Semester)</option>
+                        <option value="2023">2023 (3rd Semester)</option>
+                        <option value="2024">2024 (1st Semester)</option>
                     </select>
                 </div>
                 <div class="input-group">
+                    <label for="courseCode">Course Code:</label>
+                    <input type="text" id="courseCode" name="courseCode" required placeholder="e.g., CS-111">
+                </div>
+                <div class="input-group">
                     <label for="courseName">Course Name:</label>
-                    <input type="text" id="courseName" name="courseName" required placeholder="e.g., CS-101">
+                    <input type="text" id="courseName" name="courseName" required placeholder="e.g., Programming Fundamentals">
+                </div>
+                <div class="input-group">
+                    <label for="creditHours">Credit Hours:</label>
+                    <input type="text" id="creditHours" name="creditHours" required placeholder="e.g., 3 or 3+1(4)">
+                </div>
+                <div class="input-group">
+                    <label for="teacherName">Teacher Name:</label>
+                    <input type="text" id="teacherName" name="teacherName" placeholder="e.g., Mr. Wasi Haider">
+                </div>
+                <div class="input-group">
+                    <label for="venue">Venue:</label>
+                    <input type="text" id="venue" name="venue" placeholder="e.g., Room # 8, 1st Floor (BS Block)">
                 </div>
                 <div class="input-group">
                     <label>Select Days:</label>
@@ -82,6 +98,10 @@
                             <input type="time" id="endTime" name="endTime" required>
                         </div>
                     </div>
+                </div>
+                <div class="input-group">
+                    <label for="isLab">Is this a lab class?</label>
+                    <input type="checkbox" id="isLab" name="isLab">
                 </div>
                 <button type="submit">Add Entry</button>
             </form>
