--- a/timetable-display-project/src/AdminPanel.html
+++ b/timetable-display-project/src/AdminPanel.html
@@ -57,23 +57,23 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <label for="courseCode">Course Code:</label>
-                    <input type="text" id="courseCode" name="courseCode" required placeholder="e.g., CS-111">
+                    <label for="courseCode" class="required-field">Course Code:</label>
+                    <input type="text" id="courseCode" name="courseCode" placeholder="e.g., CS-111">
                 </div>
                 <div class="input-group">
-                    <label for="courseName">Course Name:</label>
-                    <input type="text" id="courseName" name="courseName" required placeholder="e.g., Programming Fundamentals">
+                    <label for="courseName" class="required-field">Course Name:</label>
+                    <input type="text" id="courseName" name="courseName" placeholder="e.g., Programming Fundamentals">
                 </div>
                 <div class="input-group">
-                    <label for="creditHours">Credit Hours:</label>
-                    <input type="text" id="creditHours" name="creditHours" required placeholder="e.g., 3 or 3+1(4)">
+                    <label for="creditHours" class="required-field">Credit Hours:</label>
+                    <input type="text" id="creditHours" name="creditHours" placeholder="e.g., 3 or 3+1(4)">
                 </div>
                 <div class="input-group">
-                    <label for="teacherName">Teacher Name:</label>
+                    <label for="teacherName" class="optional-field">Teacher Name:</label>
                     <input type="text" id="teacherName" name="teacherName" placeholder="e.g., Mr. Wasi Haider">
                 </div>
                 <div class="input-group">
-                    <label for="venue">Venue:</label>
+                    <label for="venue" class="required-field">Venue:</label>
                     <input type="text" id="venue" name="venue" placeholder="e.g., Room # 8, 1st Floor (BS Block)">
                 </div>
                 <div class="input-group">
