commit  13 clean code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="refresh" content="0;url=src/DisplayTimetable.html">
   <title>Timetable System</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  </style>
 </head>
 <body>
-  <p>Redirecting to timetable...</p>
-  <script>
-    window.location.href = "src/DisplayTimetable.html";
-  </script>
+  <div>
+    <h1>Redirecting to Timetable...</h1>
+  </div>
 </body>
 </html>
