--- a/src/AdminPanel.html
+++ b/src/AdminPanel.html
@@ -587,9 +587,8 @@
                             creditHours: creditHours,
                             teacherName: teacherName,
                             venue: venue,
-                            displayTimeSlot: `${startTime}-${endTime}`,
-                            startTime: startTime,
-                            endTime: endTime,
+                            startTime: document.getElementById('startTime').value,
+                            endTime: document.getElementById('endTime').value,
                             isLab: isLab
                         };
                         
