--- a/src/DisplayTimetable.html
+++ b/src/DisplayTimetable.html
@@ -6,6 +6,8 @@
     <title>Timetable Display</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <script src="../scripts/timetable.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 </head>
 <body>
     <div class="timetable-header">
