--- a/src/DisplayTimetable.html
+++ b/src/DisplayTimetable.html
@@ -20,18 +20,7 @@
                 <tr>
                     <th>Day</th>
                     <th>Session</th>
-                    <th>01:00-01:30</th>
-                    <th>01:30-02:00</th>
-                    <th>02:00-02:30</th>
-                    <th>02:30-03:00</th>
-                    <th>03:00-03:30</th>
-                    <th>03:30-04:00</th>
-                    <th>04:00-04:30</th>
-                    <th>04:30-05:00</th>
-                    <th>05:00-05:30</th>
-                    <th>05:30-06:00</th>
-                    <th>06:00-06:30</th>
-                    <th>06:30-07:00</th>
+                    <!-- Time slot columns will be added dynamically by JS -->
                 </tr>
             </thead>
             <tbody id="timetableBody">
