--- a/src/AdminLogin.html
+++ b/src/AdminLogin.html
@@ -6,6 +6,7 @@
     <title>University Timetable - Login</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <script src="../scripts/timetable.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
     <style>
         body {
             background-color: #f5f7fa;
